--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root{
+  background-color: rgb(9, 9, 9);
+}
+
+
+.container{
+  width: min(70vw);
+  margin-inline: auto;
+}
+
+.xl-header{
+  font-size: 5rem;
+  font-weight: bold;
+}
+.l-header{
+  font-size: 3.2rem;
+
+}
+.m-header{
+  font-size: 1.52rem;
+  font-weight: 300;
+}
