--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 
 :root{
   background-color: rgb(9, 9, 9);
@@ -23,4 +24,8 @@
 .m-header{
   font-size: 1.52rem;
   font-weight: 300;
+}
+
+.cool-font{
+  font-family: 'Dancing Script', cursive;
 }
