feat: backend data added with component

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,9 +29,9 @@
   font-weight: 600;
   padding-bottom: 4px;
 }
-#speciality-font{
+.speciality-font{
   font-weight: 500;
-  background: -webkit-linear-gradient(left, #a00abe, #0e4267, #9382fb);
+  background: -webkit-linear-gradient(left, #a00abe, #0e4267, #8975ff);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
