feat: tech projects added to the pages

--- a/style/home.css
+++ b/style/home.css
@@ -13,3 +13,9 @@
 .icon-slider-container{
   box-shadow: 3px 0px 12px rgba(52, 52, 52, 0.199);
 }
+
+.company-brand > img {
+  height: 8em;
+  width: 6em;
+  object-fit: contain;
+}
