--- a/app/globals.css
+++ b/app/globals.css
@@ -14,18 +14,21 @@
 }
 
 .xl-header{
-  font-size: 5rem;
+  /* font-size: 5rem; */
+  font-size: clamp(2rem, 5vw, 8rem);
   font-weight: bold;
 }
 .l-header{
-  font-size: 3.5rem;
+  /* font-size: 3.5rem; */
+  font-size: clamp(1rem, 5vw, 3.5rem);
 }
 .m-header{
-  font-size: 1.52rem;
+  /* font-size: 1.52rem; */
+  font-size: clamp(1rem, 5vw, 1.52rem);
   font-weight: 300;
 }
 .n-header{
-  font-size: 1.45rem;
+  font-size: clamp(1.45rem, 4vw, 2rem );
   font-weight: 600;
   padding-bottom: 4px;
 }
