feat: hero banner responsive fixing

--- a/style/home.css
+++ b/style/home.css
@@ -1,3 +1,13 @@
+/* Hero Banner  Style */
+.hero-main-container{
+  display: flex;
+  padding: 2rem;
+  align-items: center;
+  height: 100%;
+  width: 75%;
+  margin: auto;
+  justify-content: space-between;
+}
 .hero-img-glow-effect {
   background-color: rgb(255, 255, 255);
   box-shadow: 
@@ -6,26 +16,64 @@
   4px -6px 34px  1px #1482d1,
   -5px 4px 35px  1px #ff9900;
 }
-.hero-img img{
-  height: 15em;
-  width: 15em;
-}
-.icon-slider-container{
-  box-shadow: 3px 0px 12px rgba(52, 52, 52, 0.199);
+.hero-img-glow-effect img{
+  width: 15rem;
+  height: 100%;
 }
 
+
+
 .company-brand > img {
-  height: 3em;
   width: 3em;
+  height: 100%;
   object-fit: contain;
   border-radius: 50%;
   margin-right: 10px;
 }
+.tech-main-conatiner{
+  display: flex;
+}
+.projects-container{
+  display: flex;
+}
+.speciality-conatiner{
+  display: flex;
+}
+.icon-speciality img{
+  height: 70px;
+  width: 70px;
+  object-fit: contain;
+}
+.skill-image img{
+  width: 40px;
+  height: 100%;
+  object-fit: contain;
+}
 
+/* Slider style */
+.slider-container{
+  position: fixed;
+  top: 40%;
+  background-color: white;
+  width: 4rem;
+  box-shadow: 3px 0px 12px rgba(52, 52, 52, 0.199);
+  padding: 1rem;
+  padding-bottom: 3rem;
+}
+.slider-container li{
+  margin-top: 2rem;
+}
+.side-icon-link img{
+  width: 23px;
+  height: 100%;
+  object-fit: contain;
+}
+
+
+/* ------------media Query area */
 @media (max-width: 800px) {
   .backend-container{
     width: 100%;
-    padding-bottom: 4rem;
   }
   .frontend-container{
     width: 100%;
@@ -37,12 +85,31 @@
   .hero-main-container{
     display: inline;
   }
-  .hero-img img{
-    height: 4rem;
-    width: 4rem;
+  .projects-container{
+    display: inline;
   }
-}
+  .speciality-conatiner{
+    display: inline;
+  }
+  .hero-content{
+    margin-bottom: 3rem;
+  }
+  .slider-container{
+    visibility: hidden;
+  }
+  /* 
+  .slider-container ul{
+    width: 2rem;
+    display: flex;
+  }
+  .side-icon-link img{
+    width: 23px;
+    height: 100%;
+    object-fit: contain;
+    margin-right: 2rem;
+  }
+  .slider-container li{
+    margin-bottom: 0rem;
 
-.tech-main-conatiner{
-  display: flex;
+  } */
 }
