--- a/app/globals.css
+++ b/app/globals.css
@@ -12,11 +12,19 @@
   width: min(75vw);
   margin-inline: auto;
 }
+@media (max-width:800px) {
+  .container{
+    width: 90vw;
+  }
+}
 
 .xl-header{
   /* font-size: 5rem; */
   font-size: clamp(2rem, 5vw, 8rem);
   font-weight: bold;
+}
+.lg-header{
+  font-size: clamp(2rem, 5vw, 3.5rem);
 }
 .l-header{
   /* font-size: 3.5rem; */
@@ -24,13 +32,16 @@
 }
 .m-header{
   /* font-size: 1.52rem; */
-  font-size: clamp(1rem, 5vw, 1.52rem);
+  font-size: clamp(0.4rem, 5vw, 1.54rem);
   font-weight: 300;
 }
 .n-header{
   font-size: clamp(1.45rem, 4vw, 2rem );
   font-weight: 600;
   padding-bottom: 4px;
+}
+.mini-font{
+  font-size: clamp(0.4rem, 4vw, 0.85rem );
 }
 .speciality-font{
   font-weight: 500;
