feat: speciality comonent work

--- a/style/Speciality.css
+++ b/style/Speciality.css
@@ -1,9 +1,10 @@
-.speciality-conatiner {
+.speciality-main-container {
   display: flex;
 }
 .icon-speciality img {
-  height: 70px;
+  border: 1px solid green;
   width: 70px;
+  height: 70px;
   object-fit: contain;
 }
 @media (max-width: 800px) {
