--- a/app/globals.css
+++ b/app/globals.css
@@ -3,11 +3,13 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Solitreo&display=swap');
+@import url('../style/Skills.css');
+@import url("../style/home.css");
+@import url('../style/Slider.css');
+@import url('../style/Speciality.css');
 :root{
   background-color: rgb(9, 9, 9);
 }
-
-
 .container{
   width: min(75vw);
   margin-inline: auto;
