feat: all components are responsive

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
 @import url("../style/home.css");
 @import url('../style/Slider.css');
 @import url('../style/Speciality.css');
+@import url('../style/Projects.css');
 :root{
   background-color: rgb(9, 9, 9);
 }
@@ -22,7 +23,7 @@
 
 .xl-header{
   /* font-size: 5rem; */
-  font-size: clamp(2rem, 5vw, 8rem);
+  font-size: clamp(3.5rem, 5vw, 8rem);
   font-weight: bold;
 }
 .lg-header{
@@ -30,12 +31,12 @@
 }
 .l-header{
   /* font-size: 3.5rem; */
-  font-size: clamp(1.70rem, 4.5vw, 3.8rem);
+  font-size: clamp(2rem, 4.5vw, 3.8rem);
   font-weight: 600;
 }
 .m-header{
   /* font-size: 1.52rem; */
-  font-size: clamp(0.4rem, 5vw, 1.54rem);
+  font-size: clamp(0.9rem, 4vw, 1.54rem);
   font-weight: 300;
 }
 .n-header{
