feat: change project container display to grid

--- a/style/Projects.css
+++ b/style/Projects.css
@@ -5,8 +5,12 @@
   border-radius: 50%;
   margin-right: 10px;
 }
-.projects-container{
-  display: flex;
+.tech-projects__lists--container{
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 30%;
+  border: 1px solid red;
+
 }
 .project-item{
   cursor: pointer;
@@ -17,7 +21,8 @@
 }
 
 @media (max-width: 800px) {
-  .projects-container{
-    flex-direction: column;
+  .tech-projects__lists--container{
+    grid-auto-flow: row;
+    grid-auto-columns: auto;
   }
 }
