--- a/style/Projects.css
+++ b/style/Projects.css
@@ -6,11 +6,11 @@
   margin-right: 10px;
 }
 .tech-projects__lists--container{
+  width: 150rem;
   display: grid;
   grid-auto-flow: column;
-  grid-auto-columns: 30%;
-  border: 1px solid red;
-
+  grid-auto-columns: 36%;
+  overflow-x: auto;
 }
 .project-item{
   cursor: pointer;
@@ -22,7 +22,9 @@
 
 @media (max-width: 800px) {
   .tech-projects__lists--container{
-    grid-auto-flow: row;
+    grid-auto-flow: column;
     grid-auto-columns: auto;
+    grid-auto-columns: 15%;
+    overflow-x: auto;
   }
 }
