--- a/style/Projects.css
+++ b/style/Projects.css
@@ -6,6 +6,7 @@
   overflow-x: hidden;
   padding-left: 11em;
   align-items: center;
+  border: 1px solid red;
 }
 .company-brand > img {
   width: 3em;
@@ -22,10 +23,12 @@
   position: relative;
 }
 .tech-projects__scroll--button{
+  color: rgb(143, 143, 143);
   padding-top: 2em;
   width: 100vw;
   overflow-x: hidden;
   padding-left: 34%;
+  border: 1px solid yellow;
 }
 .project-item{
   cursor: pointer;
