--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
 @import url("../style/Slider.css");
 @import url("../style/Speciality.css");
 @import url("../style/Projects.css");
+@import url('../style/Tabs.css');
 
 :root {
   background-color: rgb(9, 9, 9);
