--- a/style/pop-up.css
+++ b/style/pop-up.css
@@ -1,23 +1,33 @@
-.photo-project__pop-up-container{
+.photo-project__pop-up-container {
   z-index: 100;
   position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.092);
+  background-color: rgba(0, 0, 0, 0.2);
 }
-.photo-project__pop-up--image-container{
-  display: inline-block;
-  background-color: white;
-  margin-top: 5%;
-  margin-left: 25%;
-  justify-content: center;
-  padding: 1em;
+.photo-project__pop-up--image-container {
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(10px);
+  padding: 1.5em;
 }
 .photo-project__pop-up--image-container > img {
-  width: 40em;
+  width: 33em;
   height: 100%;
   object-fit: contain;
 }
-
+.photo-project__close-image-button {
+  cursor: pointer;
+  display: flex;
+  justify-content: flex-end;
+}
+.photo-project__close-image-button img {
+  margin-bottom: 10px;
+  width: 2em;
+  height: 100%;
+}
