--- a/style/pop-up.css
+++ b/style/pop-up.css
@@ -11,9 +11,10 @@
   background-color: rgba(0, 0, 0, 0.2);
 }
 .photo-project__pop-up--image-container {
-  background-color: rgba(255, 255, 255, 0.2);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(10px);
+  border-radius: 16px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
   padding: 1.5em;
 }
 .photo-project__pop-up--image-container > img {
