--- a/style/pop-up.css
+++ b/style/pop-up.css
@@ -8,16 +8,16 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 .photo-project__pop-up--image-container {
-  border-radius: 16px;
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
-  padding: 1.5em;
+  background-color: rgba(255, 255, 255, 0.293);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  padding: 0.5em;
 }
 .photo-project__pop-up--image-container > img {
+  border: 2px solid white;
   width: 33em;
   height: 100%;
   object-fit: contain;
