--- a/style/pop-up.css
+++ b/style/pop-up.css
@@ -9,6 +9,7 @@
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.429);
+  overflow-x: hidden;
 }
 .photo-project__pop-up--image-container {
   background-color: rgba(255, 255, 255, 0.233);
@@ -32,4 +33,11 @@
   width: 2em;
   height: 100%;
   object-fit: cover;
+}
+
+
+@media (max-width: 800px) {
+  .photo-project__pop-up--image-container > img {
+    width: 20em;
+  }
 }
