--- a/style/Tabs.css
+++ b/style/Tabs.css
@@ -85,7 +85,7 @@
 .creative-projects__list--item > img {
   width: 20em;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   border: 1px solid rgb(236, 236, 236);
 }
 
