--- a/style/Tabs.css
+++ b/style/Tabs.css
@@ -83,10 +83,11 @@
 }
 
 .creative-projects__list--item > img {
-  width: 20em;
+  width: 25em;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   border: 1px solid rgb(236, 236, 236);
+  cursor: pointer;
 }
 
 
