--- a/style/Projects.css
+++ b/style/Projects.css
@@ -24,15 +24,15 @@
 .tech-projects__scroll--button{
   display: flex;
   column-gap: 1.4em;
-  color: rgb(83, 33, 33);
   width: 100vw;
   justify-content: flex-end;
-  font-weight: 300;
   overflow-x: hidden;
+  padding-right: 54.2em;
+  padding-top: 1em;
 }
 
-.tech-projects__scroll--button > img {
-  width: 1em;
+.tech-projects__scroll--button > button > img {
+  width: 2.4em;
   height: 100%;
 }
 .project-item{
@@ -43,17 +43,22 @@
   box-shadow: 0px 3px 9px rgb(234, 234, 234);
 }
 
+
+
+
+/* ------- */
 @media (max-width: 800px) {
   .tech-projects__lists--container{
     grid-auto-flow: row;
-    /* grid-auto-columns: auto;
-    grid-auto-columns: 15%; */
+     grid-auto-columns: auto;
     overflow-x: hidden;
+    padding: 2em;
   }
   .tech-projects__container--main{
     flex-direction: column;
     column-gap: 0;
     padding-left: 0;
     justify-content: center;
+
   }
 }
