--- a/style/Slider.css
+++ b/style/Slider.css
@@ -23,6 +23,21 @@
 
 @media (max-width:800px){
   .slider-container{
-    visibility: hidden;
+    top: 93%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    padding-bottom: 0;
+  }
+  .slider-container ul{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .slider-container li{
+    margin-left: 0;
+
+    margin-top:0;
+    padding: 1em;
   }
 }
